@@ -61,6 +61,7 @@ GameObject:
   - component: {fileID: 6145679433902361385}
   - component: {fileID: 8777117065564860597}
   - component: {fileID: 6261711238279904519}
+  - component: {fileID: -8371916542235347821}
   m_Layer: 0
   m_Name: Enemy Drone
   m_TagString: Untagged
@@ -157,6 +158,18 @@ CapsuleCollider:
   m_Height: 1
   m_Direction: 1
   m_Center: {x: 0, y: 0, z: 0}
+--- !u!114 &-8371916542235347821
+MonoBehaviour:
+  m_ObjectHideFlags: 0
+  m_CorrespondingSourceObject: {fileID: 0}
+  m_PrefabInstance: {fileID: 0}
+  m_PrefabAsset: {fileID: 0}
+  m_GameObject: {fileID: 9103877084258455116}
+  m_Enabled: 1
+  m_EditorHideFlags: 0
+  m_Script: {fileID: 11500000, guid: 376d8c64624b68d4d8a220589be1c171, type: 3}
+  m_Name: 
+  m_EditorClassIdentifier: 
 --- !u!1001 &2690159573100441910
 PrefabInstance:
   m_ObjectHideFlags: 0
