@@ -112,7 +112,7 @@ PrefabInstance:
       objectReference: {fileID: 0}
     - target: {fileID: 919132149155446097, guid: 34db9319c8a3d4c0bb8e1600d677ac25, type: 3}
       propertyPath: m_Name
-      value: Room
+      value: Room (EnemySpawner Buttons)
       objectReference: {fileID: 0}
     - target: {fileID: 6878276038103193739, guid: 34db9319c8a3d4c0bb8e1600d677ac25, type: 3}
       propertyPath: m_LocalScale.x
@@ -345,7 +345,7 @@ MonoBehaviour:
   enemyPrefabs:
   - {fileID: 3155236427702166974, guid: f0a7a90df2d132f4ebfb7b0f61047dda, type: 3}
   - {fileID: 6517155209655734486, guid: aa3e18ededaffa64b8c18cdca6715549, type: 3}
-  playerLevel: 3
+  - {fileID: 9103877084258455116, guid: 886832234058554448306391b66dc4f0, type: 3}
 --- !u!4 &7889539743957191237 stripped
 Transform:
   m_CorrespondingSourceObject: {fileID: -8679921383154817045, guid: 34db9319c8a3d4c0bb8e1600d677ac25, type: 3}
